--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "deno.enable": true,
     "deno.unstable": true,
-    "C_Cpp.errorSquiggles": "enabled"
+    "editor.quickSuggestions": {
+        "other": "on",
+        "comments": true,
+        "strings": "off"
+    }
 }
